# kolekk

./: .eslintignore  .gitignore  .prettierignore  Cargo.toml  README.md  bun.lockb  flake.nix  index.html  notes.md  notes.txt  package-lock.json  package.json  shell.nix  svelte.config.js  tsconfig.json  vite.config.ts  workspace.kdl
.cargo/: config.toml
src/: App.svelte  DataListener.svelte  routes.ts
src-tauri/: Cargo.toml  Tauri.toml  build.rs  tauri.conf.json
src-tauri/crates/kolekk-types/: Cargo.toml
src-tauri/crates/kolekk-types/src/: lib.rs
src-tauri/src/: api.rs  bad_error.rs  bookmarks.rs  clipboard.rs  config.rs  database.rs  filesystem.rs  images.rs  logg.rs  main.rs  mal.rs  orm.rs  player.rs  search.rs  tag.rs
src/lib/: Card.svelte  DataListener.svelte  Explorer.svelte  Image.svelte  ImageCard.svelte  InfoBox.svelte  ObjectExplorer.svelte  Observer.svelte  Scrollable.svelte  Selectable.svelte  TagBox.svelte  TagSearchBox.svelte  Virtual.svelte  VirtualScrollable.svelte  better_commands.ts  commands.ts  data_listener.ts  fast_scroll.ts  virtual.ts
src/lib/infobox/: ImageInfoBox.svelte  InfoBox.svelte  LastFmAlbum.svelte  MetaBox.svelte  TagsBox.svelte  TitleBox.svelte
src/lib/searcher/: Tube.svelte  database.ts  lastfm.ts  mixins.ts  searcher.ts  tachi.ts  tmdb.ts  tube.ts  yti_songs.ts
src/params/: number.ts
src/routes/: +layout.svelte  +page.svelte  Home.svelte
src/routes/hoard/: Bookmarks.svelte  ReactionImages.svelte
src/routes/hoard/bookmarks/: +layout.svelte  +page.svelte  BookmarkCard.svelte  BookmarkInfoBox.svelte  state.ts
src/routes/hoard/reaction_images/: +page.svelte  Card.svelte
src/routes/mal_fetch/: +page.svelte  Anime.svelte
src/routes/musi/: +page.svelte  File.svelte  Folder.svelte  Player.svelte  Player.ts
src/routes/music/: Album.svelte
src/routes/music/album/: +page.svelte
src/routes/music/songs/: +page.svelte
src/routes/tachi/: +page.svelte  Card.svelte  state.ts
src/routes/tachi/extensions/: +page.svelte  Card.svelte  state.ts
src/routes/tachi/extensions_virtual_test/: +page.svelte  state.ts
src/routes/tachi/manga/[id=number]/: +page.svelte
src/routes/tachi/manga/[id=number]/chapter/[index=number]/: +page.svelte
src/routes/tachi/sources/: +page.svelte  Card.svelte
src/routes/tachi/sources/[src_id=number]/popular/: +page.svelte  Card.svelte  state.ts
src/routes/tachi/sources_virtual_test/: Card.svelte  state.ts
src/routes/tachi/sources_virtual_test/[src_id=number]/popular/: +page.svelte  Card.svelte
src/routes/watch/: +page.svelte  Card.svelte  media.ts
