[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = ["config-toml"] }
kolekk-types = { path = "./crates/kolekk-types" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "config-toml"] }
anyhow = "1.0.68"
ts-rs = "6.2.1"
tauri-specta = "0.0.2"
tokio = { version = "1", features = ["full", "process"] }
sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
kolekk-types = { path = "./crates/kolekk-types" }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
futures = "0.3.26"
thiserror = "1.0.38"
fern = "0.6.1"
log = "0.4.17"
md5 = "0.7.0"
tantivy = "0.19.2"
reqwest = { version = "0.11.14", features = ["json"] }
scraper = "0.15.0"
flate2 = "1.0.25"
tar = "0.4.38"
image = "0.24.6"
lru = "0.10.0"

[dependencies.musiplayer]
# version = "0.1"
path = "../../musimanager/musiplayer"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
