[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = ["config-toml"] }
kolekk-types = { path = "./crates/kolekk-types" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "config-toml"] }
anyhow = "1.0"
ts-rs = "7.1.1"
tauri-specta = "1.0.2"
tokio = { version = "1.36.0", features = ["full", "process", "sync"] }
# sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
kolekk-types = { path = "./crates/kolekk-types" }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
futures = "0.3.30"
thiserror = "1.0.57"
fern = "0.6.2"
log = "0.4.20"
md5 = "0.7.0"
tantivy = "0.19.2"
reqwest = { version = "0.11.24", features = ["json"] }
scraper = "0.18.1"
flate2 = "1.0.28"
tar = "0.4.40"
image = "0.24.9"
lru = "0.12.3"
stretto = { version = "0.8.3", features = ["async", "serde" ] }
caches = "0.2.8"
rayon = "1.8.1"
derivative = "2.2.0"
arboard = "3.3.1"
tree_magic_mini = { version = "3.0.3", features = ["with-gpl-data"] }
walkdir = "2.4.0"

[dependencies.musiplayer]
# version = "0.1"
path = "../../musimanager/musiplayer"
# optional = true

[profile.dev.package."image"]
opt-level = 3

[features]
# music = ["musiplayer"]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# default = ["custom-protocol", "music"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
