[package]
name = "kolekk-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts-rs = { version = "7.1.1", features = ["format"] }
# sea-orm = { version = "0.11", features = [ "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2.0"

